[package]
name = "json-tools"
version = "1.0.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A collections of tools to handle json encoded data"
repository = "https://github.com/Byron/json-tools"
keywords = ["json", "tools", "lexer"]
documentation = "https://docs.rs/crate/json-tools"
